# futurAero

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  playwright.config.mjs  rust-toolchain.toml
.codex/skills/openspec-apply-change/: SKILL.md
.codex/skills/openspec-propose/: SKILL.md
.gemini/commands/opsx/: apply.toml  archive.toml  explore.toml  propose.toml
.gemini/skills/openspec-apply-change/: SKILL.md
.gemini/skills/openspec-archive-change/: SKILL.md
.gemini/skills/openspec-explore/: SKILL.md
.gemini/skills/openspec-propose/: SKILL.md
.github/workflows/: ci.yml
OpenSpec/: 03-Architecture-Desktop-IA-Locale.md  04-Moteur-Simulation-Reel.md  06-Modele-De-Donnees.md  07-Format-De-Projet.md  09-Contrats-Internes.md  11-Spec-IA-Locale.md  12-Backlog-Dev-Ready.md  13-Plan-Repo-Et-Scaffold.md  15-Matrice-De-Tests-Et-Definition-Of-Done.md  17-Spec-IA-Ultra-Locale.md  18-Spec-Integration-Industrielle.md  20-Spec-As-Built-Vs-As-Designed-Et-Commissioning.md  21-Spec-Optimization-Engine.md  23-Politique-De-Tests-Et-Couverture-100.md  24-Spec-Connectivite-Sans-Fil-Et-Telemetrie.md  25-Spec-UI-Workspace-Et-Menus.md  26-Spec-GitHub-PR-Et-Releases.md  README.md  tool-manifest.yaml
OpenSpec/archive/: README.md
OpenSpec/changes/feat-assembly-occurrence-mates/: design.md  proposal.md  tasks.md
OpenSpec/changes/feat-kinematic-joints-mvp/: design.md  proposal.md  tasks.md
OpenSpec/changes/feat-localized-collision-run-report-mvp/: design.md  proposal.md  tasks.md
OpenSpec/changes/feat-robot-cell-signals-control-mvp/: design.md  proposal.md  tasks.md
OpenSpec/changes/feat-simulation-runner-mvp/: design.md  proposal.md  tasks.md
OpenSpec/changes/feat-ui-menus-shortcuts/: proposal.md  tasks.md
OpenSpec/changes/init-mvp-futureaero/: design.md  tasks.md
OpenSpec/conformance/: README.md  ai.md  commissioning.md  data-model.md  integration.md  optimization.md  perception.md  plugins.md  safety.md  simulation.md  system.md
OpenSpec/specs/: README.md
OpenSpec/specs/ai/: spec.md
OpenSpec/specs/commissioning/: spec.md
OpenSpec/specs/data-model/: spec.md
OpenSpec/specs/integration/: spec.md
OpenSpec/specs/optimization/: spec.md
OpenSpec/specs/perception/: spec.md
OpenSpec/specs/plugins/: spec.md
OpenSpec/specs/reference/: 01-Vision-Produit.md  02-Exigences-Systeme.md  05-Roadmap-MVP.md  06-Modele-De-Donnees.md  07-Format-De-Projet.md  README.md  (+11 more)
OpenSpec/tools/: 01-Esquisse-Contraintes.md  02-Pieces-Parametriques.md  03-Assemblages-Cinematique.md  04-Cellules-Robotiques.md  05-Capteurs-Actionneurs-Controle.md  06-Simulation-Et-Jumeau-Numerique.md  07-Assistant-IA-Locale.md  08-Validation-Et-Industrialisation.md  09-Perception-Lidar-Et-Fusion-Capteurs.md  10-Integration-Industrielle.md  11-Safety-Zones-Interlocks-Lidar-Securite.md  12-As-Built-Et-Commissioning.md  13-Optimization-Engine.md  14-Plugin-SDK.md
apps/desktop/: index.html  package.json  vite.config.js
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
config/: coverage-gate.json
crates/faero-ai/: Cargo.toml  README.md
crates/faero-ai/src/: lib.rs
crates/faero-assembly/: Cargo.toml  README.md
crates/faero-commissioning/: Cargo.toml  README.md
crates/faero-core/: Cargo.toml
crates/faero-geometry/: Cargo.toml  README.md
crates/faero-integration/: Cargo.toml
crates/faero-optimization/: Cargo.toml  README.md
crates/faero-perception/: Cargo.toml  README.md
crates/faero-plugin-host/: Cargo.toml
crates/faero-robotics/: Cargo.toml  README.md
crates/faero-safety/: Cargo.toml  README.md
crates/faero-sim/: Cargo.toml  README.md
crates/faero-storage/: Cargo.toml
crates/faero-storage/src/: lib.rs
crates/faero-testkit/: Cargo.toml
crates/faero-testkit/src/: lib.rs
crates/faero-types/: Cargo.toml
schemas/: command.schema.json  event.schema.json  job.schema.json
schemas/telemetry/: bumper-status.schema.json
scripts/: bootstrap.ps1  fmt.ps1  lint.ps1  native_desktop_e2e.py  test.ps1
(+79 files in other folders)
