[workspace]
resolver = "2"
members = [
  "crates/faero-types",
  "crates/faero-core",
  "crates/faero-ai",
  "crates/faero-storage",
  "crates/faero-integration",
  "crates/faero-plugin-host",
  "crates/faero-testkit",
]
exclude = ["apps/desktop/src-tauri"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["FutureAero"]
repository = "https://example.invalid/futureaero"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
tempfile = "3.20"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
