[package]
name = "faero-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
faero-types = { path = "../faero-types" }
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true

