[package]
name = "faero-testkit"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
faero-core = { path = "../faero-core" }
faero-storage = { path = "../faero-storage" }
faero-types = { path = "../faero-types" }
serde_json.workspace = true
serde_yaml.workspace = true

