[package]
name = "futureaero-desktop-shell"
version = "0.1.0"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
faero-ai = { path = "../../../crates/faero-ai" }
faero-assembly = { path = "../../../crates/faero-assembly" }
faero-core = { path = "../../../crates/faero-core" }
faero-geometry = { path = "../../../crates/faero-geometry" }
faero-integration = { path = "../../../crates/faero-integration" }
faero-plugin-host = { path = "../../../crates/faero-plugin-host" }
faero-robotics = { path = "../../../crates/faero-robotics" }
faero-safety = { path = "../../../crates/faero-safety" }
faero-sim = { path = "../../../crates/faero-sim" }
faero-storage = { path = "../../../crates/faero-storage" }
faero-types = { path = "../../../crates/faero-types" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
